<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".addcontactActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="370dp"
        android:layout_height="75dp">
 <ImageView
     android:id="@+id/img_hinh"
     android:layout_marginTop="10dp"
     android:layout_marginLeft="10dp"
     android:layout_width="60dp"
     android:layout_height="60dp"
     android:src="@drawable/iconcamera"
     android:layout_marginStart="10dp" />
<EditText
    android:id="@+id/edt_ten"
    android:hint="@string/t_n"
    android:layout_marginLeft="15dp"
    android:layout_marginTop="30dp"
    android:layout_width="230dp"
    android:layout_height="50dp"
    android:layout_marginStart="15dp" />
</LinearLayout>
    <EditText
        android:maxLength="11"
        android:inputType="number"
        android:id="@+id/edt_so"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="20dp"
        android:hint="@string/s_i_n_tho_i"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp" />
    <LinearLayout
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_them"
            android:layout_marginRight="20dp"
            android:text="@string/th_m"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:layout_marginEnd="20dp" />
        <Button
            android:id="@+id/btn_huy"
            android:layout_marginLeft="20dp"
            android:text="@string/h_y"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:layout_marginStart="20dp" />
    </LinearLayout>
</LinearLayout>